# workshop-docker

./: DockerFile  Dockerfile  README.md  app.py  pyproject.toml
